[package]
name = "github_fork_sync"
version = "0.1.0"
authors = ["jff <yougetthat.f@gmail.com>"]
edition = "2018"
repository = "https://github.com/jffin/github_fork_sync"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
url = "2.2"
clap = { version = "2.33", features = ["yaml"] }
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
